Add componentfile for materials

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,9 +7,9 @@
     <button (click)="trackMe()" class="btn btn-warning">Track Me</button>
   </div>
   <div #gmap style="width:100%;height:500px"></div>
-  <!-- <mat-nav-list class="footer" fxLayout="row" fxLayoutAlign="space-around center" fxLayoutGap="20px">
+  <!-- <mat-list>
     <a mat-list-item routerLink="/terms-of-service" class="mat-body-2">Terms of Service</a>
     <span mat-list-item class="mat-body-2">© Copyright 2018 Sentinel. All Rights Reserved.</span>
     <a mat-list-item routerLink="/privacy-policy" class="mat-body-2">Privacy Policy</a>
-  </mat-nav-list> -->
+  </mat-list> -->
 </div>
