--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,88 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:left">
+<!-- <div style="text-align:left">
   <img width="80" height="60" alt="Angular Logo" src="../assets/GeoLocation.png">
   <h1 style="text-align:right; margin-top: -61px; ">
     {{ title }}!
   </h1>
 </div>
-<app-home></app-home>
+<app-home></app-home> -->
+<div *ngIf="!isLoggedIn" style="background-color:darkolivegreen;">
+  <mat-card class="login-style">
+    <button class="login-button-style" mat-raised-button color="primary" (click)="isLoggedIn=true">Login Me!</button>
+  </mat-card>
+</div>
+<div *ngIf="isLoggedIn">
+  <mat-card class="demo-panel">
+    <mat-card-title>
+      <!-- Angular Material Sidenav Demo -->
+      <mat-icon class="toolbar-icon" (click)="sidenav.open()">dehaze</mat-icon>
+      Meetings
+      <mat-icon class="toolbar-icon">notifications_none</mat-icon>
 
+    </mat-card-title>
+    <mat-card-content>
+      <mat-sidenav-container class="example-container">
+        <mat-sidenav #sidenav class="example-sidenav">
+          <mat-toolbar color="primary">
+            <mat-toolbar-row>
+              <img class="img-style" height="90px" src="./assets/default-profile.png">
+            </mat-toolbar-row>
+            <mat-toolbar-row>
+            </mat-toolbar-row>
+            <mat-toolbar-row>
+              <mat-icon class="toolbar-icon">person</mat-icon>
+              <span>Client</span>
+              <span class="toolbar-spacer"></span>
+            </mat-toolbar-row>
+            <mat-toolbar-row>
+              <mat-icon class="toolbar-icon">group</mat-icon>
+              <span>Team</span>
+              <span class="toolbar-spacer"></span>
+            </mat-toolbar-row>
+            <mat-toolbar-row>
+              <mat-icon class="toolbar-icon">place</mat-icon>
+              <span>Map</span>
+              <span class="toolbar-spacer"></span>
+            </mat-toolbar-row>
+            <mat-toolbar-row>
+              <mat-icon class="toolbar-icon">person_pin_circle</mat-icon>
+              <span>Live Track</span>
+              <span class="toolbar-spacer"></span>
+            </mat-toolbar-row>
+            <mat-toolbar-row>
+              <mat-icon class="toolbar-icon">card_travel</mat-icon>
+              <span>Meetings</span>
+              <span class="toolbar-spacer"></span>
+            </mat-toolbar-row>
+            <mat-toolbar-row>
+              <mat-icon class="toolbar-icon">share</mat-icon>
+              <span>Refer</span>
+              <span class="toolbar-spacer"></span>
+            </mat-toolbar-row>
+            <mat-toolbar-row>
+              <mat-icon class="toolbar-icon">business</mat-icon>
+              <span>Runee Tech</span>
+              <span class="toolbar-spacer"></span>
+            </mat-toolbar-row>
+            <mat-toolbar-row>
+              <mat-icon class="toolbar-icon">favorite</mat-icon>
+              <span>Notification</span>
+              <span class="toolbar-spacer"></span>
+              <mat-slide-toggle></mat-slide-toggle>
+            </mat-toolbar-row>
+            <mat-toolbar-row>
+              <mat-icon class="toolbar-icon">power_settings_new</mat-icon>
+              <span>Logout</span>
+              <span class="toolbar-spacer"></span>
+            </mat-toolbar-row>
+          </mat-toolbar>
+        </mat-sidenav>
 
+        <div class="example-sidenav-content">
+          <app-home></app-home>
+        </div>
 
+      </mat-sidenav-container>
+    </mat-card-content>
+  </mat-card>
+</div>
