--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div>
-  <div class="col-md-3 col-sm-12 col-xs-12">
+  <div class="row">
     <button (click)="setMapType('terrain')" class="btn btn-primary">Terrain</button>
     <button (click)="setMapType('satellite')" class="btn btn-danger">Satellite</button>
     <button (click)="setMapType('roadmap')" class="btn btn-warning">Road Map</button>
