--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -10,7 +10,8 @@ mat-toolbar-row {
 }
 
 .example-sidenav-content {
-  display: flex;
+  /* display: flex; */
+  width: 98%;
   height: 100%;
   align-items: center;
   justify-content: center;
