--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div fxLayout="column" fxLayoutAlign="center center" class="mat-dark-theme">
   <div fxLayout="row" fxLayoutAlign="center center">
-    <mat-card>
+    <mat-card id="login-card">
       <div *ngIf="!isLoggedIn">
         <mat-card-title>Login</mat-card-title>
         <mat-divider fxLayoutGap="20px"></mat-divider>
