--- a/src/app/meeting/meeting.component.html
+++ b/src/app/meeting/meeting.component.html
@@ -1,18 +1,19 @@
 
 
 <mat-tab-group>
-  <mat-tab>
-      <ng-template md-tab-label>
-          <mat-icon>extension</mat-icon>Meeting List
-        </ng-template>
+
+  <mat-tab label="Meeting List">
     <app-meeting-list></app-meeting-list>
   </mat-tab>
-  <!-- <mat-tab label="Meeting History"> -->
-  <mat-tab>
-      <ng-template md-tab-label>
-          <mat-icon>list</mat-icon>Meeting History
-        </ng-template>
+  <mat-tab label="Meeting History">
     <app-meeting-history></app-meeting-history>
   </mat-tab>
 </mat-tab-group>
+ <!-- Start Container -->
+ <div fxFlex="3 3 auto" fxLayout="row-reverse">
+    <button mat-mini-fab class="btn-fab" routerLink="/addmeeting" color="primary" matTooltip="Add a New Configuration File">
+      <mat-icon>add_circle</mat-icon>
+    </button>
+  </div>
+  <!-- End Container -->
 
