--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,100 +1,102 @@
-<!-- <div *ngIf="!isVerified">
-  <app-login (otpVerified)="otpVerifiedFromLogin($event)"></app-login>
-</div>
-
-<div *ngIf="isVerified">
-<div style="text-align:left">
-  <img width="80" height="60" alt="Angular Logo" src="../assets/GeoLocation.png">
-  <h1 style="text-align:right; margin-top: -61px; ">
-    {{ title }}!
-  </h1>
-</div>
-<mat-tab-group>
-  <mat-tab label="Map"><app-home></app-home></mat-tab>
-  <mat-tab label="Client">Client Page</mat-tab>
-  <mat-tab label="Meeting">Meeting Page</mat-tab>
-  <mat-tab label="Notifications">Notifications Page</mat-tab>
-</mat-tab-group>
-</div> -->
-
-<div *ngIf="!isVerified" style="background-color:darkolivegreen;">
-  <!-- <mat-card class="login-style">
-    <button class="login-button-style" mat-raised-button color="primary" (click)="isLoggedIn=true">Login Me!</button>
-  </mat-card> -->
-  <app-login (otpVerified)="otpVerifiedFromLogin($event)"></app-login>
-</div>
-<div *ngIf="isVerified">
-  <mat-card class="demo-panel">
-    <mat-card-title>
-      <!-- Angular Material Sidenav Demo -->
-      <mat-icon class="toolbar-icon" (click)="sidenav.open()">dehaze</mat-icon>
-      Meetings
-      <mat-icon class="toolbar-icon">notifications_none</mat-icon>
-
-    </mat-card-title>
-    <mat-card-content>
-      <mat-sidenav-container class="example-container">
-        <mat-sidenav #sidenav class="example-sidenav">
-          <mat-toolbar color="primary">
-            <mat-toolbar-row>
-              <img class="img-style" height="90px" src="./assets/default-profile.png">
-            </mat-toolbar-row>
-            <mat-toolbar-row>
-            </mat-toolbar-row>
-            <mat-toolbar-row>
-              <mat-icon class="toolbar-icon">person</mat-icon>
-              <span>Client</span>
-              <span class="toolbar-spacer"></span>
-            </mat-toolbar-row>
-            <mat-toolbar-row>
-              <mat-icon class="toolbar-icon">group</mat-icon>
-              <span>Team</span>
-              <span class="toolbar-spacer"></span>
-            </mat-toolbar-row>
-            <mat-toolbar-row>
-              <mat-icon class="toolbar-icon">place</mat-icon>
-              <span>Map</span>
-              <span class="toolbar-spacer"></span>
-            </mat-toolbar-row>
-            <mat-toolbar-row>
-              <mat-icon class="toolbar-icon">person_pin_circle</mat-icon>
-              <span>Live Track</span>
-              <span class="toolbar-spacer"></span>
-            </mat-toolbar-row>
-            <mat-toolbar-row>
-              <mat-icon class="toolbar-icon">card_travel</mat-icon>
-              <span>Meetings</span>
-              <span class="toolbar-spacer"></span>
-            </mat-toolbar-row>
-            <mat-toolbar-row>
-              <mat-icon class="toolbar-icon">share</mat-icon>
-              <span>Refer</span>
-              <span class="toolbar-spacer"></span>
-            </mat-toolbar-row>
-            <mat-toolbar-row>
-              <mat-icon class="toolbar-icon">business</mat-icon>
-              <span>Runee Tech</span>
-              <span class="toolbar-spacer"></span>
-            </mat-toolbar-row>
-            <mat-toolbar-row>
-              <mat-icon class="toolbar-icon">favorite</mat-icon>
-              <span>Notification</span>
-              <span class="toolbar-spacer"></span>
-              <mat-slide-toggle></mat-slide-toggle>
-            </mat-toolbar-row>
-            <mat-toolbar-row>
-              <mat-icon class="toolbar-icon">power_settings_new</mat-icon>
-              <span>Logout</span>
-              <span class="toolbar-spacer"></span>
-            </mat-toolbar-row>
-          </mat-toolbar>
-        </mat-sidenav>
-
-        <div class="example-sidenav-content">
-          <app-home></app-home>
+<div *ngIf="!isVerified">
+    <mat-card class="demo-panel">
+      <mat-card-title>
+        <div fxLayout="row">
+          <span fxFlex fxLayoutAlign="start">
+            <mat-icon class="toolbar-icon">dehaze</mat-icon>
+            <span>Meetings</span>
+          </span>
+          <span fxFlex fxLayoutAlign="end">
+            <mat-icon class="toolbar-icon" matTooltip="Notification">notifications_none</mat-icon>
+          </span>
         </div>
+      </mat-card-title>
+      <mat-card-content>
+        <app-login (otpVerified)="otpVerifiedFromLogin($event)"></app-login>
+      </mat-card-content>
+    </mat-card>
+  </div>
 
-      </mat-sidenav-container>
-    </mat-card-content>
-  </mat-card>
-</div>
+  <div *ngIf="isVerified">
+    <mat-card class="demo-panel">
+      <mat-card-title>
+        <div fxLayout="row">
+          <span fxFlex fxLayoutAlign="start">
+            <mat-icon class="toolbar-icon" (click)="sidenav.open()">dehaze</mat-icon>
+            <span>Meetings</span>
+          </span>
+          <span fxFlex fxLayoutAlign="end">
+            <mat-icon class="toolbar-icon" matTooltip="Notification">notifications_none</mat-icon>
+          </span>
+        </div>
+      </mat-card-title>
+      <mat-card-content>
+        <mat-sidenav-container class="example-container">
+          <mat-sidenav #sidenav class="example-sidenav">
+            <mat-toolbar color="primary" class="mat-toolbar-box">
+              <mat-toolbar-row>
+                <img class="img-style" height="90px" src="./assets/default-profile.png">
+              </mat-toolbar-row>
+              <mat-toolbar-row>
+              </mat-toolbar-row>
+              <mat-toolbar-row routerLink="/client">
+                <mat-icon class="toolbar-icon">person</mat-icon>
+                <span>Client</span>
+                <span class="toolbar-spacer"></span>
+              </mat-toolbar-row>
+              <mat-toolbar-row routerLink="/team">
+                <mat-icon class="toolbar-icon">group</mat-icon>
+                <span>Team</span>
+                <span class="toolbar-spacer"></span>
+              </mat-toolbar-row>
+              <mat-toolbar-row routerLink="/map">
+                <mat-icon class="toolbar-icon">place</mat-icon>
+                <span>Map</span>
+                <span class="toolbar-spacer"></span>
+              </mat-toolbar-row>
+              <mat-toolbar-row routerLink="/trackme">
+                <mat-icon class="toolbar-icon">person_pin_circle</mat-icon>
+                <span>Live Track</span>
+                <span class="toolbar-spacer"></span>
+              </mat-toolbar-row>
+              <mat-toolbar-row routerLink="/meetings">
+                <mat-icon class="toolbar-icon">card_travel</mat-icon>
+                <span>Meetings</span>
+                <span class="toolbar-spacer"></span>
+              </mat-toolbar-row>
+              <mat-toolbar-row>
+                <mat-icon class="toolbar-icon">share</mat-icon>
+                <span>Refer</span>
+                <span class="toolbar-spacer"></span>
+              </mat-toolbar-row>
+              <mat-toolbar-row routerLink="/">
+                <mat-icon class="toolbar-icon">business</mat-icon>
+                <span>Runee Tech</span>
+                <span class="toolbar-spacer"></span>
+              </mat-toolbar-row>
+              <mat-toolbar-row>
+                <mat-icon class="toolbar-icon">mail</mat-icon>
+                <span>Notification</span>
+                <span class="toolbar-spacer"></span>
+                <mat-slide-toggle></mat-slide-toggle>
+              </mat-toolbar-row>
+              <mat-toolbar-row routerLink="/settings">
+                <mat-icon class="toolbar-icon">settings</mat-icon>
+                <span>Settings</span>
+                <span class="toolbar-spacer"></span>
+              </mat-toolbar-row>
+              <mat-toolbar-row routerLink="/login">
+                <mat-icon class="toolbar-icon">power_settings_new</mat-icon>
+                <span>Logout</span>
+                <span class="toolbar-spacer"></span>
+              </mat-toolbar-row>
+            </mat-toolbar>
+          </mat-sidenav>
+          <div class="example-sidenav-content">
+              <router-outlet></router-outlet>
+          </div>
+
+        </mat-sidenav-container>
+      </mat-card-content>
+    </mat-card>
+  </div>
