Remove param from add client submit method

--- a/src/app/client/add-client/add-client.component.html
+++ b/src/app/client/add-client/add-client.component.html
@@ -1,6 +1,6 @@
 <mat-progress-bar *ngIf="loading" mode="indeterminate" fxFlexAlign="center"></mat-progress-bar>
 <mat-card>
-  <form fxLayout="column" class="mat-typography" fxFlex="100" (ngSubmit)="onSubmit(clientDetails)" #clientForm="ngForm">
+  <form fxLayout="column" class="mat-typography" fxFlex="100" (ngSubmit)="onSubmit()" #clientForm="ngForm">
     <div fxLayout="row">
       <div fxLayout="column" class="mat-typography" fxFlex="100">
         <div fxLayout="row" fxFlex="80" fxLayout="column" fxLayoutGap="30px">
