--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,12 +1,12 @@
 mat-toolbar-row {
-  height: 42px;
-  font-family: -webkit-body;
+  height: 40px;
+  font-family: serif;
 }
 
 .example-container {
   width: 100%;
   height: 550px;
-  border: 1px solid rgba(111, 111, 111, 0.50);
+  border: 1px solid rgba(111, 111, 111, 0.5);
 }
 
 .example-sidenav-content {
@@ -17,7 +17,8 @@ mat-toolbar-row {
 }
 
 .example-sidenav {
-  padding: 20px;
+  padding: 30px;
+  width: 200px;
   background-color: #07459e;
   /* background-image: url('../assets/flag1.jpg'); */
 }
@@ -25,7 +26,6 @@ mat-toolbar-row {
 .mat-toolbar-box {
   background-color: #03429cba;
   /* background-image: url('../assets/flag1.jpg'); */
-
 }
 
 .demo-panel {
@@ -37,28 +37,45 @@ mat-toolbar-row {
   margin: 10px 0px;
 }
 
+.title-icon {
+  padding: 0px 10px;
+}
+
 .toolbar-icon {
-  padding: 0px 30px;
+  /* padding: 0px 30px; */
+  margin: 0px 15px 0px -30px;
 }
 
 .toolbar-spacer {
   flex: 1 1 auto;
 }
 
-.login-style{
-    width: 40%;
-    height: 150px;
-    margin-top: 120px;
-    margin-left: 150px;
+.login-style {
+  width: 40%;
+  height: 150px;
+  margin-top: 120px;
+  margin-left: 150px;
 }
 
-.login-button-style{
-    margin-top: 35px;
-    margin-left: 40px;
+.login-button-style {
+  margin-top: 35px;
+  margin-left: 40px;
 }
 
-.img-style{
-    margin-left: 50PX;
-    border-radius: 50%;
-    background-color: darkgoldenrod;
-  }
+.img-style {
+  margin-left: 40px;
+  border-radius: 50%;
+  background-color: #3f51b5;
+}
+
+.title-style {
+  margin-top: -2px;
+}
+
+.toolbar-fullscreen {
+  display: none;
+}
+
+.toolbar-filler {
+  flex: 1 1 auto;
+}
