--- a/src/app/client/client-list/client-list.component.html
+++ b/src/app/client/client-list/client-list.component.html
@@ -1,3 +1,41 @@
-<p>
-  client-list works!
-</p>
+<div fxFlex="100" fxLayout="column" fxLayoutAlign="space-around">
+ <!-- Start Container -->
+ <div class="container" fxLayout="column" fxLayoutAlign="space-between stretch">
+    <div>
+      <div fxLayout="column" fxLayoutGap="10px">
+        <!-- <div *ngFor="let operator of operators; index as i"> -->
+          <mat-card>
+            <div class="card-size" fxLayout="row wrap" fxLayoutGap="10px">
+              <div fxLayoutAlign="space-between center" fxFlex="1 5 auto">
+                <div class="img-size" fxLayoutAlign="start">
+                  <img src="../../../favicon.ico" fxFlex="50px" />
+                </div>
+                <div fxFlex="25" >
+                  <span> Test Name </span>
+                </div>
+                <div fxFlex="30">
+                  <span> Address </span>
+                </div>
+                <div fxFlex="45">
+                  <span> Mobile Number </span>
+                </div>
+              </div>
+            </div>
+          </mat-card>
+          <mat-divider></mat-divider>
+        <!-- </div> -->
+        <div>
+          <mat-paginator [length]="totalCount" [pageSize]="pageSize" [pageIndex]="pageIndex" (page)="page($event.pageIndex)" fxFlex></mat-paginator>
+        </div>
+      </div>
+    </div>
+    <div *ngIf="totalCount === 0">
+      <mat-card>
+        <div class="card-size card-no-result" fxLayout="row wrap">
+          No result found
+        </div>
+      </mat-card>
+    </div>
+  </div>
+  <!-- end Container -->
+  </div>
