--- a/src/app/trackme/trackme.component.html
+++ b/src/app/trackme/trackme.component.html
@@ -1,1 +1,5 @@
-    <div #gmap style="width:100%;height:550px"></div>
+<div class="row" fxFlexAlign="center">
+  <button mat-button color="primary" (click)="findMe()">Find Me</button>
+  <button mat-button color="primary" (click)="trackMe()">Track Me</button>
+</div>
+<div #gmap style="width:100%;height:-webkit-fill-available"></div>
