--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,7 +12,7 @@
   </mat-list>
 </div> -->
 
-<div>
+<div style="height:537px;">
     <div class="row" fxFlexAlign="center">
       <button mat-button color="primary" (click)="findMe()">Find Me</button>
       <button mat-button color="primary" (click)="trackMe()">Track Me</button>
