--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="column" fxLayoutAlign="center center" class="mat-dark-theme">
+<div fxLayout="column" fxLayoutAlign="center center" class="mat-dark-theme" style="height: -webkit-fill-available;">
   <div fxLayout="row" fxLayoutAlign="center center" style="padding: 25px">
     <mat-card id="login-card">
       <div *ngIf="!isLoggedIn">
