--- a/src/app/trackme/trackme.component.html
+++ b/src/app/trackme/trackme.component.html
@@ -1,5 +1,5 @@
-<div class="row" fxFlexAlign="center">
+<div class="row" fxFlexAlign="center" style="height: 537px;">
   <button mat-button color="primary" (click)="findMe()">Find Me</button>
   <button mat-button color="primary" (click)="trackMe()">Track Me</button>
+  <div #gmap style="width:100%;height:-webkit-fill-available"></div>
 </div>
-<div #gmap style="width:100%;height:-webkit-fill-available"></div>
