--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,7 +17,7 @@
       <button mat-button color="primary" (click)="findMe()">Find Me</button>
       <button mat-button color="primary" (click)="trackMe()">Track Me</button>
     </div>
-    <div #gmap style="width:100%;height:-webkit-fill-available"></div>
+    <div #gmap style="width:100%;height:-webkit-fill-available"> <button mat-button color="primary" (click)="findMe()">Find Me</button></div>
     <!-- <mat-list>
       <a mat-list-item routerLink="/terms-of-service" class="mat-body-2">Terms of Service</a>
       <span mat-list-item class="mat-body-2">© Copyright 2018 Sentinel. All Rights Reserved.</span>
