--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,27 +1,14 @@
-<!-- <div>
-  <div class="row" fxFlexAlign="center">
-    <button mat-button color="primary" (click)="setMapType('terrain')">Terrain</button>
-    <button mat-button color="primary" (click)="setMapType('satellite')">Satellite</button>
-    <button mat-button color="primary" (click)="setMapType('roadmap')">Road Map</button>
-  </div>
-  <div #gmap style="width:100%;height:500px"></div>
-  <mat-list>
-    <a mat-list-item routerLink="/terms-of-service" class="mat-body-2">Terms of Service</a>
-    <span mat-list-item class="mat-body-2">© Copyright 2018 Sentinel. All Rights Reserved.</span>
-    <a mat-list-item routerLink="/privacy-policy" class="mat-body-2">Privacy Policy</a>
-  </mat-list>
-</div> -->
-
-<div style="height:537px;">
-    <div class="row" fxFlexAlign="center">
-      <button mat-button color="primary" (click)="findMe()">Find Me</button>
-      <button mat-button color="primary" (click)="trackMe()">Track Me</button>
-    </div>
+<div style="height:573px;">
     <div #gmap style="width:100%;height:-webkit-fill-available"> <button mat-button color="primary" (click)="findMe()">Find Me</button></div>
     <!-- <mat-list>
       <a mat-list-item routerLink="/terms-of-service" class="mat-body-2">Terms of Service</a>
       <span mat-list-item class="mat-body-2">© Copyright 2018 Sentinel. All Rights Reserved.</span>
       <a mat-list-item routerLink="/privacy-policy" class="mat-body-2">Privacy Policy</a>
     </mat-list> -->
+  </div>
+  <div fxFlex="3 3 auto" fxLayout="row-reverse">
+    <button mat-mini-fab class="btn-fab" (click)="findMe()">
+      <mat-icon>gps_fixed</mat-icon>
+    </button>
   </div>
 
