--- a/src/app/trackme/trackme.component.html
+++ b/src/app/trackme/trackme.component.html
@@ -1,5 +1,13 @@
-<div class="row" fxFlexAlign="center" style="height: 537px;">
-  <button mat-button color="primary" (click)="findMe()">Find Me</button>
-  <button mat-button color="primary" (click)="trackMe()">Track Me</button>
+<div class="row" fxFlexAlign="center" style="height: 573px;">
   <div #gmap style="width:100%;height:-webkit-fill-available"></div>
+</div>
+<div fxFlex="3 3 auto" fxLayout="row-reverse">
+  <button mat-mini-fab class="btn-fab-find" color="primary" (click)="findMe()">
+    <mat-icon>gps_fixed</mat-icon>
+  </button>
+</div>
+<div fxFlex="3 3 auto" fxLayout="row-reverse">
+  <button mat-mini-fab class="btn-fab-track" color="primary" (click)="trackMe()">
+    <mat-icon>directions_walk</mat-icon>
+  </button>
 </div>
