--- a/src/app/trackme/trackme.component.html
+++ b/src/app/trackme/trackme.component.html
@@ -2,12 +2,12 @@
   <div #gmap style="width:100%;height:-webkit-fill-available"></div>
 </div>
 <div fxFlex="3 3 auto" fxLayout="row-reverse">
-  <button mat-mini-fab class="btn-fab-find" color="primary" (click)="findMe()">
+  <button mat-mini-fab class="btn-fab-find" (click)="findMe()">
     <mat-icon>gps_fixed</mat-icon>
   </button>
 </div>
 <div fxFlex="3 3 auto" fxLayout="row-reverse">
-  <button mat-mini-fab class="btn-fab-track" color="primary" (click)="trackMe()">
+  <button mat-mini-fab class="btn-fab-track" (click)="trackMe()">
     <mat-icon>directions_walk</mat-icon>
   </button>
 </div>
