--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,7 +2,7 @@
   <div fxLayout="row" fxLayoutAlign="center center" style="padding: 25px">
     <mat-card id="login-card">
       <div *ngIf="!isLoggedIn">
-        <mat-card-title>Login</mat-card-title>
+        <mat-card-title>Login Test</mat-card-title>
         <mat-divider fxLayoutGap="20px"></mat-divider>
         <form class="example-form" *ngIf="!otpSend">
           <div fxLayout="row">
