--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,3 +12,25 @@
     </button>
   </div>
 
+<form [formGroup]="form" (ngSubmit)="onSubmit()">
+
+  <input type="file" name="avatar" (change)="onFileChange($event)" />
+  <button type="submit">Upload</button>
+
+</form>
+
+<div class="container">
+  <div class="row">
+      <div class="col-md-6 offset-md-3">
+          <h3>Choose File</h3>
+          <form (ngSubmit)="onSubmit1()">
+              <div class="form-group">
+                  <input type="file" name="image"  />
+              </div>
+              <div class="form-group">
+                  <button class="btn btn-primary">Submit</button>
+              </div>
+          </form>
+      </div>
+  </div>
+</div>
